Tuple & Set practice.

--- a/Basics/Tuple.ipynb
+++ b/Basics/Tuple.ipynb
@@ -317,6 +317,227 @@
    "source": [
     "a,b,c,d,e = 1,2,3,4,5 #unpacking"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 'banana')\n",
+      "('apple', 'banana')\n",
+      "('apple', 'banana')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple containing the following elements: 'apple', 'banana', 'cherry', and 'orange'.#\n",
+    "# Extract the first two elements and concatenate them into a new tuple.\n",
+    "# Expected output: ('apple', 'banana')\n",
+    "\n",
+    "# creating a tuple containing the following elements: 'apple', 'banana', 'cherry', and 'orange'\n",
+    "fruits = ('apple', 'banana', 'cherry', 'orange')\n",
+    "# Using slicing to store first 2 values\n",
+    "new_fruits = fruits[0:2]\n",
+    "# printing the new tuple\n",
+    "print(new_fruits)\n",
+    "\n",
+    "# Alternate way\n",
+    "new_fruits = tuple(fruits[0:2])\n",
+    "print(new_fruits)\n",
+    "\n",
+    "# or using unpacking\n",
+    "first, second, *_ = fruits # here *_ is used to aasign remaining elements to _ . It is way to discard unused elements\n",
+    "\n",
+    "new_fruits = (first,second)\n",
+    "\n",
+    "print(new_fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Female\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "Create a tuple of three nested tuples containing the following data:\n",
+    "('John', 'Smith', 'Male', 25)\n",
+    "('Sarah', 'Jones', 'Female', 32)\n",
+    "('David', 'Brown', 'Male', 45)\n",
+    "\n",
+    "Access the third element of the second tuple (i.e., 'Female').\n",
+    "\n",
+    "Expected output: 'Female'\n",
+    "'''\n",
+    "# Create a tuple of three nested tuples\n",
+    "personal_info = (('John', 'Smith', 'Male', 25),('Sarah', 'Jones', 'Female', 32),('David', 'Brown', 'Male', 45))\n",
+    "\n",
+    "# Accesing the third element of the second tuple\n",
+    "gender = personal_info[1][2]\n",
+    "\n",
+    "# Printing output\n",
+    "print(gender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple containing the following elements: 1, 2, 3, 4, 5. \n",
+    "# Convert it to a list and append the elements 6 and 7 to the list. \n",
+    "# Convert the list back to a tuple and print the result.\n",
+    "# Expected output: (1, 2, 3, 4, 5, 6, 7)\n",
+    "\n",
+    "# Creating tuple using tuple() constructor\n",
+    "nums = (1,2,3,4,5)\n",
+    "\n",
+    "# Converting tuple to list.\n",
+    "num_lst = list(nums)\n",
+    "\n",
+    "# appending the element 6,7 to list.\n",
+    "num_lst += [6,7]\n",
+    "\n",
+    "# converting list back to tuple & Printing output\n",
+    "new_tuple = tuple(num_lst)\n",
+    "print(new_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('apple', 'banana', 'cherry', 1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create two tuples containing the following data:\n",
+    "# ('apple', 'banana', 'cherry')\n",
+    "# (1, 2, 3)\n",
+    "# Create a new tuple by concatenating the two tuples together.\n",
+    "# Expected output: ('apple', 'banana', 'cherry', 1, 2, 3)\n",
+    "\n",
+    "# Creating two tuples\n",
+    "fruits_tuple = ('apple', 'banana', 'cherry')\n",
+    "nums_tuple = (1, 2, 3)\n",
+    "\n",
+    "# Concatenating two tuples into new tuple and printing it.\n",
+    "new_tuple = fruits_tuple + nums_tuple\n",
+    "print(new_tuple)\n",
+    "\n",
+    "# Purpose of the code is to creates a new tuple from 2 tuples by concatenating them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple containing the following elements: 4, 5, 6, 1, 2, 3. \n",
+    "# Sort the tuple and print the result.\n",
+    "# Expected output: (1, 2, 3, 4, 5, 6)\n",
+    "\n",
+    "# Creating the tuple\n",
+    "unsorted_tuple = (4, 5, 6, 1, 2, 3)\n",
+    "\n",
+    "# Sorting the tuple & printing it.\n",
+    "sorted_num_tuple = tuple(sorted(unsorted_tuple))\n",
+    "print(sorted_num_tuple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first_name: John\n",
+      "last_name: Doe\n",
+      "gender: Male\n",
+      "age: 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple containing the following elements: 'John', 'Doe', 'Male', 25. Unpack the tuple and assign each element to a separate variable: first_name, last_name, gender, and age. Then, print each variable.\n",
+    "# Expected output:\n",
+    "# first_name: John\n",
+    "# last_name: Doe\n",
+    "# gender: Male\n",
+    "# age: 25\n",
+    "\n",
+    "# Creating a tuple\n",
+    "personal_info = ('John', 'Doe', 'Male', 25)\n",
+    "\n",
+    "# Unpacking & printing the output\n",
+    "first_name, last_name, gender, age = personal_info\n",
+    "print(f\"first_name: {first_name}\\nlast_name: {last_name}\\ngender: {gender}\\nage: {age}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a tuple containing the following elements: 'apple', 'banana', 'cherry', 'apple', 'banana', 'cherry'. \n",
+    "# Count the number of occurrences of 'apple' in the tuple.\n",
+    "# Expected output: 2\n",
+    "\n",
+    "# Creating a tuple\n",
+    "fruit_tuple = ('apple', 'banana', 'cherry', 'apple', 'banana', 'cherry')\n",
+    "\n",
+    "# Counting occurences of 'apple' in the tuple & printing it\n",
+    "count = fruit_tuple.count('apple')\n",
+    "print(count)"
+   ]
   }
  ],
  "metadata": {
