--- a/Basics/set.ipynb
+++ b/Basics/set.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Set datastructure:**\n",
+    "## **Set data structure:**\n",
     "* Set is heterogeneous collection of unique elements.\n",
     "* Duplicates are not allowed.\n",
     "* Indexing and slicing is not possible.\n",
@@ -215,6 +215,273 @@
    "source": [
     "set.clear() # Even if all elements are removed, empty set object is present.\n",
     "set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to create a set.\n",
+    "# Expected output: {1, 2, 3, 4, 5}\n",
+    "\n",
+    "# creating a set\n",
+    "nums_set = {1, 2, 3, 4, 5}\n",
+    "\n",
+    "# printing the set\n",
+    "print(nums_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to add member(s) in a set.\n",
+    "# Expected output: {1, 2, 3, 4, 5, 6, 7}\n",
+    "\n",
+    "# Creating an empty set\n",
+    "nums_set = set()\n",
+    "\n",
+    "# Adding members in the set\n",
+    "nums_set.update([1,2,3,4,5,6,7])\n",
+    "print(nums_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 6}\n",
+      "{2, 4, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to remove item(s) from a set.\n",
+    "# Expected output: {2, 4, 6}\n",
+    "\n",
+    "# Create a set\n",
+    "nums_set = {1, 2, 3, 4, 5, 6, 7}\n",
+    "\n",
+    "# Removing items from the set\n",
+    "nums_set.discard(1)\n",
+    "nums_set.discard(3)\n",
+    "nums_set.discard(5)\n",
+    "nums_set.discard(7)\n",
+    "\n",
+    "# Printing the set\n",
+    "print(nums_set)\n",
+    "\n",
+    "# Create a set\n",
+    "nums_set_2 = {1, 2, 3, 4, 5, 6, 7}\n",
+    "\n",
+    "# Alternate approach is using difference_update()\n",
+    "nums_set_2.difference_update({1,3,5,7})\n",
+    "print(nums_set_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 4, 5, 6}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to remove an item from a set if it is present in the set.\n",
+    "# Expected output: {1, 3, 4, 5, 6}\n",
+    "\n",
+    "# creating a set \n",
+    "nums_set = {1, 2, 3, 4, 5, 6}\n",
+    "\n",
+    "# Removing item from a set\n",
+    "nums_set.remove(2) # This will raise error if element is not present in \n",
+    "# Alternate way\n",
+    "nums_set.discard(2) # This will prevent raising error if the element is not present in set.\n",
+    "print(nums_set)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to find the intersection of two sets.\n",
+    "# Expected output: {2, 4}\n",
+    "\n",
+    "# Creating two sets\n",
+    "set_1 = {1,2,3,4,5}\n",
+    "set_2 = {2,4,6,8,10}\n",
+    "\n",
+    "# Finding the intersectipns of two sets and printing it.\n",
+    "intersection_set = set_1.intersection(set_2)\n",
+    "print(intersection_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5, 6, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to find the union of two sets.\n",
+    "# Expected output: {1, 2, 3, 4, 5, 6, 7}\n",
+    "\n",
+    "# Creating two sets\n",
+    "set1 = {1,2,3,4,5}\n",
+    "set2 = {6,7}\n",
+    "\n",
+    "# Finding union of the above sets and printing it.\n",
+    "union_set = set1.union(set2)\n",
+    "print(union_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 3, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to find the difference between two sets.\n",
+    "# Expected output: {1, 3, 5}\n",
+    "\n",
+    "# Creating two sets\n",
+    "set_1 = {1,2,3,4,5}\n",
+    "set_2 = {2,4,6,8}\n",
+    "\n",
+    "# finding the difference between two sets and printing it.\n",
+    "difference_set = set_1.difference(set_2)\n",
+    "print(difference_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to check if a set is a subset of another set.\n",
+    "# Expected output: True\n",
+    "\n",
+    "# Creating two sets\n",
+    "set1 = {1,2,3,4,5}\n",
+    "set2 = {1,2,3}\n",
+    "\n",
+    "# checking if a set is a subset of another set\n",
+    "print(set2.issubset(set1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to find the length of a set.\n",
+    "# Expected output: 5\n",
+    "\n",
+    "# Creating a set\n",
+    "set_a = {1,2,3,4,5}\n",
+    "\n",
+    "# Finding length of set\n",
+    "length = len(set_a)\n",
+    "print(length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to remove all items from a set.\n",
+    "# Expected output: set()\n",
+    "\n",
+    "# Creating a set\n",
+    "set_a = {1,2,3,4,5}\n",
+    "\n",
+    "# Removing all elements from a set\n",
+    "set_a.clear()\n",
+    "print(set_a)"
    ]
   }
  ],
