Set data structure.

--- a/Basics/set.ipynb
+++ b/Basics/set.ipynb
@@ -218,6 +218,139 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Mathematical Operations on set:-**\n",
+    "* union(): It is used to return the union of two sets. Eg. a.union(b) will return all the elements present in a and b.\n",
+    "* intersection(): It is used to return the intersection of two sets. Eg. a.intersection(b) will return all the common elements present in both a and b.\n",
+    "* difference(): It is used to return the difference of two sets. Eg. a.difference(b) will return all the elements present in a but not in b.\n",
+    "* symmetric_difference(): It is used to return the symmetric difference of two sets. Eg. a.symmetric_difference(b) will return all the elements present in a or b but not in both."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# union()\n",
+    "set_a = {1,2,3,4}\n",
+    "set_b = {3,4,5,6}\n",
+    "set_a.union(set_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{4, 5}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# intersection()\n",
+    "set_a = {1,2,3,4,5}\n",
+    "set_b = {4,5,6,7,8}\n",
+    "set_a.intersection(set_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 3, 5}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# difference()\n",
+    "set_1 = {1,2,3,4,5}\n",
+    "set_2 = {2,4,6,8}\n",
+    "set_1.difference(set_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 6, 7, 8}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# symmetric_difference()\n",
+    "set_a = {1,2,3,4,5}\n",
+    "set_b = {4,5,6,7,8}\n",
+    "set_a.symmetric_difference(set_b) # Returns all non common elements from both sets."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Set comprehension:**\n",
+    "* Set comprehension is used to create a set from an iterable.\n",
+    "* Syntax: {expression for item in iterable} or {expression for item in iterable if condition}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set comprehension\n",
+    "set_a = {x for x in range(10)}\n",
+    "print(set_a)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
