--- a/Basics/OOPS.ipynb
+++ b/Basics/OOPS.ipynb
@@ -182,6 +182,181 @@
     "    * To declare these methods we have to use @staticmethod decorator explicitly.\n",
     "    * We can access these methods either by using class name or by using object reference."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No of cylinder\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Engine:\n",
+    "    cylinder = 4\n",
+    "    def m1(self):\n",
+    "        print('My Car engine is 4 cylinder')\n",
+    "    \n",
+    "class Car:\n",
+    "    def __init__(self):\n",
+    "        self.engine = Engine()\n",
+    "\n",
+    "    def m2(self):\n",
+    "        print('No of cylinder')\n",
+    "        print(self.engine.cylinder)\n",
+    "\n",
+    "c = Car()\n",
+    "c.m2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m1 method\n",
+      "m2 method\n",
+      "m3 method\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inheritance\n",
+    "class A:\n",
+    "    def m1(self):\n",
+    "        print('m1 method')\n",
+    "\n",
+    "class B(A):\n",
+    "    def m2(self):\n",
+    "        print('m2 method')\n",
+    "\n",
+    "class C(B):\n",
+    "    def m3(self):\n",
+    "        print('m3 method')\n",
+    "\n",
+    "c = C()\n",
+    "c.m1()\n",
+    "c.m2()\n",
+    "c.m3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m1 method\n",
+      "m2 method\n",
+      "m1 method\n",
+      "m3 method\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def m1(self):\n",
+    "        print('m1 method')\n",
+    "\n",
+    "class B(A):\n",
+    "    def m2(self):\n",
+    "        print('m2 method')\n",
+    "\n",
+    "class C(A):\n",
+    "    def m3(self):\n",
+    "        print('m3 method')\n",
+    "\n",
+    "c=C()\n",
+    "b=B()\n",
+    "\n",
+    "b.m1()\n",
+    "b.m2()\n",
+    "\n",
+    "c.m1()\n",
+    "c.m3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m1 method\n",
+      "m2 method\n",
+      "m3 method\n"
+     ]
+    }
+   ],
+   "source": [
+    "class A:\n",
+    "    def m1(self):\n",
+    "        print('m1 method')\n",
+    "\n",
+    "class B:\n",
+    "    def m2(self):\n",
+    "        print('m2 method')\n",
+    "\n",
+    "class C(A,B):\n",
+    "    def m3(self):\n",
+    "        print('m3 method')\n",
+    "\n",
+    "c=C()\n",
+    "c.m1()\n",
+    "c.m2()\n",
+    "c.m3()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  Operator overloading\n",
+    "class Student:\n",
+    "    def __init__(self, name, marks):\n",
+    "        self.name = name\n",
+    "        self.marks = marks\n",
+    "    def __gt__(self, other):\n",
+    "        return self.marks > other.marks\n",
+    "\n",
+    "s1 = Student('Piyush',25)\n",
+    "s2 = Student('Jay',50)\n",
+    "s1 < s2\n"
+   ]
   }
  ],
  "metadata": {
