--- a/Python Basics Tutorial/Day11.ipynb
+++ b/Python Basics Tutorial/Day11.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -61,14 +61,7 @@
     "words = ['ANCDE','print','for','while']\n",
     "new_lst = []\n",
     "for word in words:\n",
-    "    length = len(word)\n",
-    "    if word not in new_lst:\n",
-    "        inn_lst = []\n",
-    "        if length not in inn_lst:\n",
-    "            inn_lst.append(word)\n",
-    "            inn_lst.append(length)\n",
-    "        new_lst.append(inn_lst)\n",
-    "\n",
+    "    new_lst.append([word,len(word)])\n",
     "print(new_lst)\n"
    ]
   }
