--- a/Python Basics Tutorial/Day9.ipynb
+++ b/Python Basics Tutorial/Day9.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'str'>\n",
+      "<class 'list'>\n",
       "hsuyiP si na retupmoc gnireenigne etaudarg morf aidnI "
      ]
     }
    ],
    "source": [
     "# WAP TO REVERSE THE WORDS.\n",
-    "info = ('Piyush is an computer engineering graduate from India')\n",
-    "info = info.split()\n",
+    "info = ('Piyush is an computer engineering graduate from India') # string\n",
+    "info = info.split() # list of words separated by comma\n",
     "for word in range(len(info)):\n",
-    "    print(info[word][::-1], end=\" \")\n"
+    "    print(info[word][::-1], end=\" \") # reversing each wors from list\n"
    ]
   }
  ],
