--- a/Basics/Generators.ipynb
+++ b/Basics/Generators.ipynb
@@ -101,6 +101,32 @@
     "for i in values:\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 9 "
+     ]
+    }
+   ],
+   "source": [
+    "def generator_func():\n",
+    "    i = 0\n",
+    "    while i < 10:\n",
+    "        yield i\n",
+    "        i += 1\n",
+    "    \n",
+    "values = generator_func()\n",
+    "\n",
+    "for i in values: # We are demanding the values or elements stored in this function and assigning them to i\n",
+    "    print(i, end=' ')"
+   ]
   }
  ],
  "metadata": {
