--- a/Python Basics Tutorial/Day14.ipynb
+++ b/Python Basics Tutorial/Day14.ipynb
@@ -233,9 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'name' count is : 3\n"
+     ]
+    }
+   ],
    "source": [
     "# COUNT THE OCCURENCES OF THE SPECIFIC WORD.\n",
     "str = 'This is a name which is a human name name'\n",
