--- a/Basics/Functions.ipynb
+++ b/Basics/Functions.ipynb
@@ -139,7 +139,7 @@
     "#### **Argument**\n",
     "* An argument is a value that is passed to a function when it is called.\n",
     "* Arguments are specified after the function name, inside the parentheses. You can add as many arguments as you want, just separate them with a comma.\n",
-    "\n",
+    "* Example: def foo(a, b, c): print(a, b, c)  foo(2,3,4) here 2,3,4 are arguments.\n",
     "#### **Types of Arguments**\n",
     "* Positional arguments: These are the arguments that are passed to the function in the same order as they are defined in the function.\n",
     "* Keyword arguments: These are the arguments that are passed to the function using the keyword.\n",
@@ -153,7 +153,8 @@
    "metadata": {},
    "source": [
     "#### **Parameter(Formal argument)**\n",
-    "* A parameter is a variable defined at the time of function definition."
+    "* A parameter is a variable defined at the time of function definition.\n",
+    "* Example: def foo(a, b, c) here a, b, c are parameters."
    ]
   },
   {
