--- a/Python Basics Tutorial/Bike_Data_Analysis/Bike_Data.ipynb
+++ b/Python Basics Tutorial/Bike_Data_Analysis/Bike_Data.ipynb
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "037a8213",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1334,7 @@
        "Name: type_of_bike, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "f7380309",
    "metadata": {},
    "outputs": [
@@ -1495,7 +1495,7 @@
        "7            9.430000       78.0  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "73f828f1",
    "metadata": {},
    "outputs": [],
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "id": "08d2a096",
    "metadata": {},
    "outputs": [],
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "id": "9a9c3a40",
    "metadata": {},
    "outputs": [
@@ -1640,7 +1640,7 @@
        "4            2.900000      116.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "1e5d3405",
    "metadata": {},
    "outputs": [
@@ -1762,7 +1762,7 @@
        "360           411            4.193412   99.33865  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1777,12 +1777,12 @@
    "id": "73a7cd9b",
    "metadata": {},
    "source": [
-    "#### Lets Check for count of Bike w.r.t Petrol and Electric bike."
+    "#### What is the majority of bikes in automobile market?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 29,
    "id": "6ac13b76",
    "metadata": {},
    "outputs": [
@@ -1806,18 +1806,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e7bec9e0",
    "metadata": {},
    "source": [
     "**Observation**\n",
     "\n",
-    "- Majority of Bikes are Petrol bikes."
+    "- Majority of Bikes in markets are Petrol bikes."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 30,
    "id": "e86bc0c3",
    "metadata": {},
    "outputs": [
@@ -1829,7 +1830,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,8 +1840,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9d038627",
+   "metadata": {},
+   "source": [
+    "* Which category of bikes are more affordable in automobile market?\n",
+    "* Which category of bikes give more economic mileage in automobile market?\n",
+    "* Which category of bikes has premium segment of bike in automobile market?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 31,
    "id": "3767246c",
    "metadata": {},
    "outputs": [
@@ -1927,12 +1939,21 @@
     "* Electric bikes are more afforable than Petrol bikes.\n",
     "* Electric bikes result in giving most economy mileage in the industry.\n",
     "* Electric bikes are most suitable and affordable bikes in the current automobile market.\n",
-    "* Petrol bikes are having most premium category of bikes in market."
+    "* Petrol bikes are having most premium segement category of bikes in market."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5c9ce46c",
+   "metadata": {},
+   "source": [
+    "* Which are the Top 5 best premium category Petrol bikes w.r.t to Price."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 32,
    "id": "fc63d86e",
    "metadata": {},
    "outputs": [
@@ -2025,20 +2046,28 @@
        "310   99.33865  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Lets check for Top 5 best premium category Petrol bikes w.r.t to Price. \n",
     "petrol_bikes = data_2[data_2[\"type_of_bike\"] == 1][['model_name','price', 'mileage', 'acceleration_speed','top_speed']]\n",
     "petrol_bikes.sort_values(\"price\", ascending=False).head(5)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "43c8032e",
+   "metadata": {},
+   "source": [
+    "* Which are top 5 best high end Electric bikes w.r.t to Price."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "9c91fa4a",
    "metadata": {
     "scrolled": true
@@ -2126,20 +2155,28 @@
        "13  Kabira Mobility KM 4000  136990    150.0                 3.1      120.0"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Lets check for Top 5 best high end Electric bikes w.r.t to Price. \n",
     "electric_bikes = data_2[data_2[\"type_of_bike\"] == 0][['model_name','price', 'mileage', 'acceleration_speed','top_speed']]\n",
     "electric_bikes.sort_values(\"price\", ascending=False).head(5)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0d254b36",
+   "metadata": {},
+   "source": [
+    "* Which are top 5 best performing and affordable petrol bikes w.r.t to Mileage."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 34,
    "id": "063044d7",
    "metadata": {},
    "outputs": [
@@ -2225,20 +2262,28 @@
        "36     TVS Star City +  65865     86.0                 3.2       90.0"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Top 5 best performing and affordable petrol bikes w.r.t to Mileage.\n",
     "best_mileage_bikes = petrol_bikes.sort_values(\"mileage\", ascending = False).head(5)\n",
     "best_mileage_bikes"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "dcea20f1",
+   "metadata": {},
+   "source": [
+    "* Which are Top 5 best performing and affordable Electric bikes w.r.t to Mileage."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 35,
    "id": "ab15b75f",
    "metadata": {},
    "outputs": [
@@ -2324,20 +2369,19 @@
        "4        Ola Electric S1   85099    181.0            2.900000      116.0"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Lets check for Top 5 best performing and affordable Electric bikes w.r.t to Mileage. \n",
     "best_electric_mileage_bikes = electric_bikes.sort_values(\"mileage\", ascending=False).head(5)\n",
     "best_electric_mileage_bikes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 36,
    "id": "a8e9ad53",
    "metadata": {},
    "outputs": [
@@ -2345,7 +2389,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Piyush S More\\AppData\\Local\\Temp\\ipykernel_22144\\3183861024.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "C:\\Users\\Piyush S More\\AppData\\Local\\Temp\\ipykernel_27972\\620841463.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  data_2.skew().index\n"
      ]
     }
@@ -2358,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 37,
    "id": "d67456c3",
    "metadata": {},
    "outputs": [
@@ -2446,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 38,
    "id": "2aa26bd3",
    "metadata": {},
    "outputs": [
@@ -2532,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 39,
    "id": "27f69107",
    "metadata": {},
    "outputs": [
@@ -2618,7 +2662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 40,
    "id": "599b644d",
    "metadata": {},
    "outputs": [
@@ -2747,7 +2791,7 @@
        "top_speed                    -0.551446   1.000000  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2758,7 +2802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 41,
    "id": "47a86a91",
    "metadata": {},
    "outputs": [
@@ -2780,7 +2824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 42,
    "id": "3e9dec33",
    "metadata": {},
    "outputs": [
@@ -2790,7 +2834,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
