--- a/Advanced Python/Visualization/Titanic_dataset.ipynb
+++ b/Advanced Python/Visualization/Titanic_dataset.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Importing Libraries**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -12,6 +20,14 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reading data"
    ]
   },
   {
@@ -323,50 +339,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 103,
    "metadata": {
     "id": "we8v5EyaaO4R"
    },
    "outputs": [],
    "source": [
     "data_dropped = data.drop([\"Cabin\"], axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "n8fyRWUqaO7h",
-    "outputId": "1de59cf8-a712-4937-d9ef-b6f4b6912202"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PassengerId     0\n",
-       "Survived        0\n",
-       "Pclass          0\n",
-       "Name            0\n",
-       "Sex             0\n",
-       "Age            86\n",
-       "SibSp           0\n",
-       "Parch           0\n",
-       "Ticket          0\n",
-       "Fare            1\n",
-       "Embarked        0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_dropped.isnull().sum()"
    ]
   },
   {
@@ -1727,7 +1706,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Piyush S More\\AppData\\Local\\Temp\\ipykernel_28568\\1188251951.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "C:\\Users\\Piyush S More\\AppData\\Local\\Temp\\ipykernel_2984\\1188251951.py:1: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  data.skew()\n"
      ]
     },
@@ -3207,7 +3186,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Piyush S More\\AppData\\Local\\Temp\\ipykernel_28568\\3433892897.py:2: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "C:\\Users\\Piyush S More\\AppData\\Local\\Temp\\ipykernel_2984\\3433892897.py:2: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  data_2.skew()\n"
      ]
     },
@@ -3243,7 +3222,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Piyush S More\\AppData\\Local\\Temp\\ipykernel_28568\\3215461679.py:2: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
+      "C:\\Users\\Piyush S More\\AppData\\Local\\Temp\\ipykernel_2984\\3215461679.py:2: FutureWarning: Dropping of nuisance columns in DataFrame reductions (with 'numeric_only=None') is deprecated; in a future version this will raise TypeError.  Select only valid columns before calling the reduction.\n",
       "  data.skew().index\n"
      ]
     },
